Fix Class Name Icon Bug, Tweak Pause Alignment

--- a/src/AudioPlayer.css
+++ b/src/AudioPlayer.css
@@ -111,7 +111,7 @@ video {
 
 .fa-pause {
   font-size: 1.5rem;
-  margin-left: 2px;
+  margin-left: 1px;
   color: #3eb4e0;
   transition: .4s;
 }
